--- a/app/src/main/res/layout/lv_undo.xml
+++ b/app/src/main/res/layout/lv_undo.xml
@@ -6,14 +6,14 @@
         android:layout_height="wrap_content"
 >
     <ImageView
-            android:layout_width="128dp"
-            android:layout_height="128dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="fitCenter"
             android:id="@+id/ivThumbnail1"
     />
     <ImageView
-            android:layout_width="128dp"
-            android:layout_height="128dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:scaleType="fitCenter"
             android:id="@+id/ivThumbnail2"
     />
@@ -22,7 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center_vertical"
-            android:padding="12dp"
+            android:paddingTop="4dp"
+            android:paddingBottom="4dp"
+            android:paddingStart="8dp"
+            android:paddingEnd="8dp"
             android:id="@+id/tvDesc"
     />
 
