--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -72,6 +72,7 @@
         </HorizontalScrollView>
     </LinearLayout>
 
+    <!-- layer for floating button -->
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -101,6 +102,7 @@
         />
 
     </LinearLayout>
+
     <ImageButton
             android:layout_width="44dp"
             android:layout_height="44dp"
