微妙なレイアウト調整

--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -67,12 +67,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
-                    android:id="@+id/grid"
+                    android:id="@+id/llThumbnails"
             />
         </HorizontalScrollView>
     </LinearLayout>
 
+
     <!-- layer for floating button -->
+
     <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
