--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -1,118 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ActMain"
 >
+    <androidx.appcompat.widget.Toolbar
 
-    <LinearLayout
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+
+            style="@style/BaseToolbar"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+
+    />
+
+    <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
+            android:layout_below="@+id/toolbar"
     >
-
-        <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:id="@+id/ivCurrentGirl"
-                android:scaleType="fitCenter"
-                android:contentDescription="@string/current_girl"
-        />
 
         <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+        >
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:id="@+id/ivCurrentGirl"
+                    android:scaleType="fitCenter"
+                    android:contentDescription="@string/current_girl"
+            />
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+            >
+                <ImageButton
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:src="@drawable/ic_delete"
+                        android:layout_weight="1"
+                        android:id="@+id/btnNew"
+                        android:contentDescription="@string/start"
+                />
+                <ImageButton
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="1"
+                        android:id="@+id/btnColor"
+                        android:contentDescription="@string/color"
+                />
+                <ImageButton
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="1"
+                        android:id="@+id/btnDetail"
+                        android:contentDescription="@string/detail"
+                />
+                <ImageButton
+                        android:layout_width="0dp"
+                        android:layout_height="44dp"
+                        android:layout_weight="1"
+                        android:id="@+id/btnPose"
+                        android:contentDescription="@string/pose"
+                />
+            </LinearLayout>
+
+            <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/svThumbnails"
+            >
+                <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:id="@+id/llThumbnails"
+                />
+            </HorizontalScrollView>
+        </LinearLayout>
+
+
+        <!-- layer for floating button -->
+
+        <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="end|top"
                 android:orientation="horizontal"
         >
             <ImageButton
-                    android:layout_width="0dp"
+                    android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:src="@drawable/ic_delete"
-                    android:layout_weight="1"
-                    android:id="@+id/btnNew"
-                    android:contentDescription="@string/start"
+                    android:src="@drawable/ic_arrow_back"
+                    android:id="@+id/btnHistoryBack"
+                    android:contentDescription="@string/back"
             />
             <ImageButton
-                    android:layout_width="0dp"
+                    android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:id="@+id/btnColor"
-                    android:contentDescription="@string/color"
+                    android:src="@drawable/ic_history"
+                    android:id="@+id/btnHistory"
+                    android:contentDescription="@string/history"
             />
             <ImageButton
-                    android:layout_width="0dp"
+                    android:layout_width="44dp"
                     android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:id="@+id/btnDetail"
-                    android:contentDescription="@string/detail"
+                    android:src="@drawable/ic_arrow_forward"
+                    android:id="@+id/btnHistoryForward"
+                    android:contentDescription="@string/forward"
             />
-            <ImageButton
-                    android:layout_width="0dp"
-                    android:layout_height="44dp"
-                    android:layout_weight="1"
-                    android:id="@+id/btnPose"
-                    android:contentDescription="@string/pose"
-            />
+
         </LinearLayout>
 
-        <HorizontalScrollView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/svThumbnails"
-        >
-            <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:id="@+id/llThumbnails"
-            />
-        </HorizontalScrollView>
-    </LinearLayout>
-
-
-    <!-- layer for floating button -->
-
-    <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="end|top"
-            android:orientation="horizontal"
-    >
         <ImageButton
                 android:layout_width="44dp"
                 android:layout_height="44dp"
-                android:src="@drawable/ic_arrow_back"
-                android:id="@+id/btnHistoryBack"
-                android:contentDescription="@string/back"
-        />
-        <ImageButton
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/ic_history"
-                android:id="@+id/btnHistory"
-                android:contentDescription="@string/history"
-        />
-        <ImageButton
-                android:layout_width="44dp"
-                android:layout_height="44dp"
-                android:src="@drawable/ic_arrow_forward"
-                android:id="@+id/btnHistoryForward"
-                android:contentDescription="@string/forward"
+                android:layout_gravity="end|bottom"
+                android:src="@drawable/ic_save"
+                android:id="@+id/btnSaveAll"
+                android:contentDescription="@string/save_all"
         />
 
-    </LinearLayout>
+    </FrameLayout>
 
-    <ImageButton
-            android:layout_width="44dp"
-            android:layout_height="44dp"
-            android:layout_gravity="end|bottom"
-            android:src="@drawable/ic_save"
-            android:id="@+id/btnSaveAll"
-            android:contentDescription="@string/save_all"
-    />
-
-</FrameLayout>
-
+</RelativeLayout>
