--- a/app/src/main/res/layout/dlg_seeds.xml
+++ b/app/src/main/res/layout/dlg_seeds.xml
@@ -9,42 +9,44 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
-            android:padding="12dp"
-
             android:fillViewport="true"
-            android:scrollbarStyle="outsideOverlay"
+            android:padding="12dp"
             android:clipToPadding="false"
+            android:scrollbarStyle="outsideOverlay"
     >
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:gravity="center_horizontal"
         >
-            <ImageView
-                    android:layout_width="256dp"
-                    android:layout_height="256dp"
-                    android:id="@+id/ivImage"
-                    android:scaleType="fitCenter"
-                    android:importantForAccessibility="no"
-            />
-
-            <LinearLayout
+            <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:id="@+id/llPanel"
-                    android:paddingStart="12dp"
-                    android:paddingEnd="12dp"
-                    android:paddingBottom="6dp"
+                    android:inputType="textMultiLine"
+                    android:id="@+id/etSeeds"
+                    android:layout_margin="12dp"
+                    android:minLines="6"
             />
-
-            <TextView
+            <Button
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="3dp"
-                    android:id="@+id/tvText"
-                    android:textColor="#000"
+                    android:textAllCaps="false"
+                    android:text="@string/randomize"
+                    android:id="@+id/btnRandomize"
+            />
+            <Spinner
+
+                    android:layout_marginTop="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/spStep"
+            />
+            <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textAllCaps="false"
+                    android:text="@string/generate"
+                    android:id="@+id/btnGenerate"
             />
         </LinearLayout>
     </ScrollView>
