add naming button in context menu

--- a/app/src/main/res/layout/dlg_context_menu.xml
+++ b/app/src/main/res/layout/dlg_context_menu.xml
@@ -115,11 +115,19 @@
                 <Button
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:id="@+id/btnName"
+                        android:text="@string/naming"
+                        android:textAllCaps="false"
+                        />
+                <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:id="@+id/btnTextSend"
                         android:text="@string/share"
                         android:textAllCaps="false"
                 />
             </LinearLayout>
+
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
