fixup: link name and email

--- a/app/src/main/res/layout/dlg_naming.xml
+++ b/app/src/main/res/layout/dlg_naming.xml
@@ -54,7 +54,7 @@
             <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textEmailAddress"
+                    android:inputType="text"
                     android:importantForAutofill="no"
                     android:id="@+id/etEMail"
                     />
